homeautomation/code-server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hass-code-server
    app.kubernetes.io/instance: homeautomation
  name: hass-code-server
  namespace: homeautomation
spec:
  host: code-server.homeautomation.apps.homelab.csfreak.com
  port:
    targetPort: hass-code-server-http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hass-code-server
    weight: 100
  wildcardPolicy: None
